[code] refactor code, add comments